<resources>
    <string name="app_name">Mum´s Recipes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- LOGIN -->

    <string name="login">Login</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="haveNotAccount">still do not you have an account? register here</string>

    <string name="buttonlogin">Sign in</string>

    <string name="noMail">You have not written a mail</string>
    <string name="noPass">You have not written a password</string>
    <string name="userDontExist">Mail or pass are wrong</string>
    <string name="rememberPass">Remember Pass?</string>

    <!-- SIGN UP -->

    <string name="signIn">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="returnLogin">Return Login</string>
    <string name="mailExits">There is an account using this mail</string>

    <!-- NAVIGATION-->

    <string name="navProfile">View Profile</string>
    <string name="navOut">Sign Out</string>
    <string name="navAccount">Your Acountt</string>
    <string name="ownRecipes">Own Recipes</string>
    <string name="otherRecipes">Recipes of other users</string>

    <!-- Profile-->

    <string name="profileNewPass">New Pass</string>
    <string name="profileCurrentPass">Current Pass</string>
    <string name="profileTextView">Current pass is needed to save the changes</string>
    <string name="profileSaveChanges">Save Changes</string>
    <string name="titleProfile">Profile of</string>

    <string name="mailUsed">That mail account is used by another user</string>
    <string name="passRequired">Write your current pass to save the changes</string>

    <!-- dialogoImagenes -->

    <string name="tituloDialogoImagenes">Choose a image</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="cancel">Cancel</string>

    <!-- Recetas -->
    <string name="opinionLabel">Do you like this recipe ?</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>


    <!--EdicionReceta-->

    <string name="isRequired">is required</string>
    <string name="image">Image</string>

    <!-- Receta  -->
    <string name="likeRecipe">Do you like this recipe?</string>
    <string name="comments">Comments:</string>

    <!--Comments -->

    <string name="tituloDialogoComentarios">New Comment</string>
    <string name="hintDialogoComentarios">Write your comment here...</string>
    <string name="comment">Comment</string>

    <string name="acept">Accept</string>

    <!-- Dialogo borrar-->

    <string name="tituloBorrarReceta">Remove Recipe</string>
    <string name="textoBorrarReceta">do you want delete this recipe?</string>
</resources>