<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_own_recipes"
            android:icon="@drawable/ic_own_recipe"
            android:title="@string/ownRecipes" />
        <item
            android:id="@+id/nav_other_recipes"
            android:icon="@drawable/ic_other_recipe"
            android:title="@string/otherRecipes" />
    </group>

    <item android:title="@string/navAccount">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24px"
                android:title="@string/navProfile" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_nav_log_of"
                android:title="@string/navOut" />
        </menu>
    </item>

</menu>
