<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloDialogoComentarios"
        android:textSize="18sp" />

    <MultiAutoCompleteTextView
        android:id="@+id/textoDialogoComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:hint="@string/hintDialogoComentarios"
        android:minHeight="150dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="11sp" />

        <Button
            android:id="@+id/comentar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/comment"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="11sp" />
    </LinearLayout>

</LinearLayout>