<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_light_transparent"
    android:orientation="vertical">

     <!--  <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/tituloDialogoImagenes"
        android:textSize="20sp" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/dialogCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:drawableLeft="@drawable/ic_camara"
            android:padding="5dp"
            android:text="@string/camera"
            android:textColor="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/dialogGalery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:drawableLeft="@drawable/ic_galery"
            android:padding="5dp"
            android:text="@string/galery"
            android:textColor="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/dialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/screen_background_light_transparent"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_blue_light" />
    </LinearLayout>


</LinearLayout>