<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/fondo_edicion"
    android:paddingTop="20dp"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/content_shape"
        android:padding="12dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagenRecetaEdicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="400dp"
            android:minHeight="200dp"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <EditText
            android:id="@+id/tituloRecetaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName" />

        <MultiAutoCompleteTextView
            android:id="@+id/editTextDescriptionRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />

      <!--  <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opinionLabel" /> -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/LikeIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_like_green" />


            <TextView
                android:id="@+id/likeCountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/dislikeIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_dislike_red" />

            <TextView
                android:id="@+id/dislikeCountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/guardarReceta"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="#EEE"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoComentariosEditing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comments" />

            <ImageView
                android:id="@+id/nuevoComentario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/new_gray" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listaComentarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>